[package]
name = "latest-compose-version"
version = "0.1.0"
authors = ["Caleb Falcione <caleb.falcione@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
